# ChangeLog for app-text/acroread
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.206 2014/12/16 13:25:37 pacho Exp $

  16 Dec 2014; Pacho Ramos <pacho@gentoo.org> acroread-9.5.5-r2.ebuild:
  amd64/x86 stable, bug #528596

*acroread-9.5.5-r2 (07 Nov 2014)

  07 Nov 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +acroread-9.5.5-r2.ebuild, -acroread-9.5.5-r1.ebuild:
  cleaned up RDEPEND again, added missing deps as per bug 520696

*acroread-9.5.5-r1 (22 Oct 2014)

  22 Oct 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +acroread-9.5.5-r1.ebuild:
  revbump to fix some gx86-multilib deps and clean up the *DEPEND a little

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> acroread-9.5.5.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  15 Jun 2014; Michał Górny <mgorny@gentoo.org> acroread-9.5.5.ebuild:
  Disallow mixing of emul-linux-x86 with multilib dependencies, since all
  dependencies are unmasked now.

  27 May 2014; Michał Górny <mgorny@gentoo.org> acroread-9.5.5.ebuild:
  Support fulfilling the dependencies using multilib packages, bug #490156.

  13 Jul 2013; Zac Medico <zmedico@gentoo.org> acroread-9.5.5.ebuild:
  Lowercase tar extension required for unpack, bug 476734.

  12 Jul 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -acroread-9.5.4.ebuild:
  Remove old

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> acroread-9.5.5.ebuild:
  Stable for x86, wrt bug #469960

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> acroread-9.5.5.ebuild:
  Stable for amd64, wrt bug #469960

*acroread-9.5.5 (07 Jul 2013)

  07 Jul 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +acroread-9.5.5.ebuild:
  Version bump, bug 469912

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> acroread-9.5.4.ebuild:
  Use `unpack` rather than `tar xf`.

  11 May 2013; Andreas K. Huettel <dilfridge@gentoo.org> acroread-9.5.4.ebuild: