@@ -1,14 +1,0 @@
-DEFINED_PHASES=install postinst postrm preinst prepare setup unpack
-DEPEND=dev-util/bsdiff >=sys-apps/sed-4 app-arch/unzip
-DESCRIPTION=Adobe's PDF reader
-EAPI=5
-HOMEPAGE=http://www.adobe.com/products/reader/
-IUSE=cups html ldap nsplugin linguas_zh_CN linguas_zh_TW linguas_ja linguas_ko
-KEYWORDS=-* amd64 x86 ~amd64-linux ~x86-linux
-LICENSE=Adobe
-RDEPEND=media-libs/fontconfig cups? ( net-print/cups ) x86? ( =dev-libs/openssl-0.9.8* x11-libs/gtk+:2 net-dns/libidn || ( x11-libs/pangox-compat <x11-libs/pango-1.31[X] ) ldap? ( net-nds/openldap ) html? ( || ( www-client/firefox www-client/firefox-bin www-client/seamonkey ) ) ) amd64? ( || ( app-emulation/emul-linux-x86-gtklibs[-abi_x86_32(-)] ( >=x11-libs/gtk+-2.24.23:2[abi_x86_32(-)] || ( >=x11-libs/pangox-compat-0.0.2[abi_x86_32(-)] <x11-libs/pango-1.31[X,abi_x86_32(-)] ) ) ) || ( app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] ( =dev-libs/openssl-0.9.8*[abi_x86_32(-)] >=net-dns/libidn-1.28[abi_x86_32(-)] ldap? ( >=net-nds/openldap-2.4.38-r1[abi_x86_32(-)] ) ) ) ) linguas_zh_CN? ( media-fonts/acroread-asianfonts[linguas_zh_CN] ) linguas_ja? ( media-fonts/acroread-asianfonts[linguas_ja] ) linguas_zh_TW? ( media-fonts/acroread-asianfonts[linguas_zh_TW] ) linguas_ko? ( media-fonts/acroread-asianfonts[linguas_ko] )
-RESTRICT=strip mirror
-SLOT=0
-SRC_URI=http://ardownload.adobe.com/pub/adobe/reader/unix/9.x/9.5.5/enu/AdbeRdr9.5.5-1_i486linux_enu.tar.bz2
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	mozextension	ba6829881080a663d68531424a3dfbc6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	nsplugins	7ea51b2f6cbd5b36b9c0163cc3ee03a2	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=35f5efc08c200877da5a02a3c65742cb
