@@ -1,6 +1,12 @@
 # ChangeLog for app-text/acroread
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.206 2014/12/16 13:25:37 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.207 2015/05/09 12:32:16 pacho Exp $
+
+*acroread-9.5.5-r3 (09 May 2015)
+
+  09 May 2015; Pacho Ramos <pacho@gentoo.org> +acroread-9.5.5-r3.ebuild,
+  -acroread-9.5.5.ebuild:
+  Don't create bogus file (#412051), fix .desktop file (#476096 and #543592)
 
   16 Dec 2014; Pacho Ramos <pacho@gentoo.org> acroread-9.5.5-r2.ebuild:
   amd64/x86 stable, bug #528596
